--- a/eagle/templates/base.html
+++ b/eagle/templates/base.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>{% block title%}!!!Change the title!!!{% endblock%}{% if home_page %}Code Snippets{% endif %}{% if home_page %} |{% endif %} Snippify.me</title>
+    <title>
+          {% block title%}!!!Change the title!!!{% endblock%}
+          {% if home_page %}??{% endif %}
+    </title>
     <link rel="shortcut icon" href="{{MEDIA_URL}}images/favico.ico" />
     <link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/base.css"/>
-    {% block head %}{% endblock %}
+    {% block head %}
+    {% endblock %}
 </head>
 <body>
 <div id="wrapper">
