--- a/eagle/templates/common/index.html
+++ b/eagle/templates/common/index.html
@@ -6,7 +6,7 @@
 {% endblock%}
 
 {% block extra_scripts %}
-<script src="{{MEDIA_URL}}js/swfobject.js"></script>
+<script src="{{STATIC_URL}}js/task.js"></script>
 {% endblock %}
 
 {% block content %}
