--- a/eagle/templates/common/index.html
+++ b/eagle/templates/common/index.html
@@ -7,6 +7,7 @@
 
 {% block extra_scripts %}
 <script src="{{STATIC_URL}}js/task.js"></script>
+<link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/task.css"/>
 {% endblock %}
 
 {% block content %}
@@ -17,7 +18,8 @@
     <div class="left-box box-container clearfix">
         <div class="boxed clearfix">
             <h2>Tasks</h2>
-            {% include "task/task_list.html" %}
+		{% include "task/task_create.html" %}
+           	{% include "task/task_list.html" %}
         </div>
     </div>
 
