--- a/eagle/templates/task/task_list.html
+++ b/eagle/templates/task/task_list.html
@@ -16,32 +16,26 @@
     <div id={{mode}} class="task-div"> <!--filter-->
         <ul>
         {% for atask in tasks %}
-        <li id={{aday.id}}>
+        <li id={{atask.id}}>
             <a href="#" class="task-title" >{{atask.title}}</a>
 			<div class="task-rate"><a>Done?</a></div>
             <div class="task-info" >
                 <textarea class="task-detail">{{atask.detail}}</textarea><br>
-                <a  class="task-priority">{{atask.priority}}</a>
-                <div  class="task-detail">
+                <a class="task-priority">{{atask.priority}}</a>
+                <div class="task-tags">
 					{% for t in atask.tag.all %}
                     <a id={{t.id}}>{{t.name}}</a>
                 	{% endfor %}
 				</div>
-				<div  class="task-op">
-				<button value="update">update</button>
-				<button value="cancel">cancel</button>
+				<div class="task-op">
+                    <button class="edit">edit</button>
+                    <button class="delete">delete</button>
 				</div>
 				<hr>
             </div>
         </li>
         {% endfor %}
         </ul>
-        
 	</div>
 	<hr>
 {% endfor %}
-
-
-
-
-
