--- a/eagle/templates/task/task_list.html
+++ b/eagle/templates/task/task_list.html
@@ -20,7 +20,8 @@
             <a href="#" class="task-title" >{{atask.title}}</a>
 			<div class="task-rate"><a>Done?</a></div>
             <div class="task-info" >
-                <textarea class="task-detail">{{atask.detail}}</textarea><br>
+                <span class="task-detail">{{atask.detail}}</span>
+                <br>
                 <a class="task-priority">{{atask.priority}}</a>
                 <div class="task-tags">
 					{% for t in atask.tag.all %}
