--- a/eagle/templates/task/task_list.html
+++ b/eagle/templates/task/task_list.html
@@ -16,7 +16,7 @@
     <div id={{mode}} class="task-div"> <!--filter-->
         <ul>
         {% for atask in tasks %}
-        <li id={{atask.id}}>
+        <li id={{atask.id}} class="task-id">
             <a href="#" class="task-title" >{{atask.title}}</a>
 			<div class="task-rate"><a>Done?</a></div>
             <div class="task-info" >
