--- a/eagle/templates/base.html
+++ b/eagle/templates/base.html
@@ -12,6 +12,7 @@
 	{% endblock %}
 </head>
 <body>
+{% csrf_token %}
 <div id="wrapper">
      <div id="header" class="clearfix">
         <div id="logo" >
