--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -1,13 +1,11 @@
 <div class="task-create">
-
-<h3>I want to…</h3>
-
-<div class="task-create-main">
-
-<input class="task-title-input" placeholder="Add a task">
-<button class="task-create-btn">
-<img src="">New task...
-</button>
-
-</div>
+  <h3>I want to…</h3>
+  <div class="task-create-main">
+    <input class="new-task-title" placeholder="Add a task">
+    <button class="task-create-btn">
+      <img src="">New task...
+    </button>
+    <div class="task">
+    </div>
+  </div>
 </div>
