--- a/eagle/task/static/css/task.css
+++ b/eagle/task/static/css/task.css
@@ -1,30 +1,28 @@
 @charset "utf-8";
-.task-create
-{
-background-color:#d0e4fe;
+.task-create {
+  background-color: #d0e4fe;
 }
 
-.task-title-input{
-
-margin-left:0.2;
-width:61.8%;
-border: 1px solid #CCC;
-padding: 7px;
-font: normal 17px "Helvetica Neue",Helvetica,Arial,sans-serif;
-height: 21px;
+.new-task-title {
+  margin-left: 0.2;
+  width: 61.8%;
+  border: 1px solid #CCC;
+  padding: 7px;
+  font: normal 17px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  height: 21px;
 }
 
 .task-create-btn {
-border: 1px normal #CCC;
-padding: 7px;
-font: normal 17px "Helvetica Neue",Helvetica,Arial,sans-serif;
-text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
+  border: 1px normal #CCC;
+  padding: 7px;
+  font: normal 17px "Helvetica Neue", Helvetica,Arial, sans-serif;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.4);
 }
 
 .task-div {
-font: normal 15px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: normal 15px "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .task-title {
-font: normal 16px "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font: normal 16px "Helvetica Neue", Helvetica, Arial,sans-serif;
 }
