--- a/eagle/templates/common/index.html
+++ b/eagle/templates/common/index.html
@@ -7,6 +7,9 @@
 
 {% block extra_scripts %}
 <script src="{{STATIC_URL}}js/task.js"></script>
+{% endblock %}
+
+{% block extra_css %}
 <link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/task.css"/>
 {% endblock %}
 
