--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -1,11 +1,27 @@
 <div class="task-create">
-  <h3>I want to…</h3>
-  <div class="task-create-main">
-    <input class="new-task-title" placeholder="Add a task">
-    <button class="task-create-btn">
-      <img src="">New task...
-    </button>
-    <div class="task">
+    <h3>I want to…</h3>
+    <div class="task-create-main">
+        <div>
+            <a href="#" class="new-task">add a task</a>
+        </div>
+
+        <div class='new-title'>
+            <label>title</label>
+            <input class="title-input" value="">
+        </div>
+
+        <div class='new-detail'>
+            <input class="detail-input" value="">
+        </div>
+
+        <div class='new-tags'>
+            <label>tags</label>
+            <input class="tags-input" value="">
+        </div>
+
+        <div class="new-option">
+            <button class="new-confirm">confirm</button>
+            <button class="new-cancel">cancel</button>
+        </div>
     </div>
-  </div>
 </div>
