--- a/eagle/templates/base.html
+++ b/eagle/templates/base.html
@@ -1,64 +1,66 @@
 ﻿<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="utf-8" />
-    <title>
-          {% block title%}!!!Change the title!!!{% endblock%}
-          {% if home_page %}??{% endif %}
-    </title>
-    <link rel="shortcut icon" href="{{STATIC_URL}}img/eagle.ico" />
-    <link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/base.css"/>
-  	{% block head %}
-	{% endblock %}
-</head>
-<body>
-{% csrf_token %}
-<div id="wrapper">
-     <div id="header" class="clearfix">
-        <div id="logo" >
-         <!-- 尚有错误 -->
-		<a href="/account/index/"><img src ="{{STATIC_URL}}img/eagle.ico" > </img></a>
+    <head>
+        <meta charset="utf-8" />
+        <title>
+            {% block title%}!!!Change the title!!!{% endblock%}
+            {% if home_page %}??{% endif %}
+        </title>
+        <link rel="shortcut icon" href="{{STATIC_URL}}img/eagle.ico" />
+        <link rel="stylesheet" media="all" charset="utf-8" href="{{STATIC_URL}}css/base.css"/>
+        {% block extra_css %}
+        {% endblock %}
+        {% block head %}
+        {% endblock %}
+    </head>
+    <body>
+        {% csrf_token %}
+        <div id="wrapper">
+            <div id="header" class="clearfix">
+                <div id="logo" >
+                    <!-- 尚有错误 -->
+                    <a href="/account/index/"><img src ="{{STATIC_URL}}img/eagle.ico" > </img></a>
+                </div>
+                <div class="menubar clearfix">
+                    <ul id="primary-navigation">
+                        {% if user.is_authenticated %}
+                        <li>
+                        <a class="first" href="/account/userinfo/">{{user.username}}</a>
+                        </li>
+                        <li>
+                        <a href="/task/create/">Add a task</a>
+                        </li>
+                        <li>
+                        <a href="/account/logout/">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="first" id="login"><a href="/account/login/">Login / Register</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+
+            <div id="main" class="{% if e %}intro {% endif %}{% if sidebared %}sidebared {% endif %}clearfix">
+                <div id="main-content">
+                    {% block content %}
+                    {% endblock %}
+                </div>
+            </div>
+
+            <div id="footer">
+                <ul class="secondary-navigation">
+                    <li><a href="/about/">About</a></li>
+                    <li><a href="/faq/">FAQ</a></li>
+                    <li><a href="/legal/">Legal</a></li>
+                    <li><span>{% now "Y" %} Eagle | eagle.com </span></li>
+                </ul>
+            </div>
         </div>
-        <div class="menubar clearfix">
-            <ul id="primary-navigation">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="first" href="/account/userinfo/">{{user.username}}</a>
-                </li>
-                <li>
-                    <a href="/task/create/">Add a task</a>
-                </li>
-                <li>
-                    <a href="/account/logout/">Logout</a>
-                </li>
-                {% else %}
-                    <li class="first" id="login"><a href="/account/login/">Login / Register</a></li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
-
-    <div id="main" class="{% if e %}intro {% endif %}{% if sidebared %}sidebared {% endif %}clearfix">
-        <div id="main-content">
-            {% block content %}
-            {% endblock %}
-        </div>
-    </div>
-
-    <div id="footer">
-        <ul class="secondary-navigation">
-            <li><a href="/about/">About</a></li>
-            <li><a href="/faq/">FAQ</a></li>
-            <li><a href="/legal/">Legal</a></li>
-            <li><span>{% now "Y" %} Eagle | eagle.com </span></li>
-        </ul>
-    </div>
-</div>
 
 
-	<script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.7.1.min.js"></script>
-	<script type="text/javascript" src="{{STATIC_URL}}js/ajax_csrf.js"></script>
-	<script type="text/javascript" src="{{STATIC_URL}}js/base.js"></script>
-	{% block extra_scripts %}{% endblock %}
-</body>
+        <script type="text/javascript" src="{{STATIC_URL}}js/jquery-1.7.1.min.js"></script>
+        <script type="text/javascript" src="{{STATIC_URL}}js/ajax_csrf.js"></script>
+        <script type="text/javascript" src="{{STATIC_URL}}js/base.js"></script>
+        {% block extra_scripts %}{% endblock %}
+    </body>
 </html>
