--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -1,27 +1,23 @@
 <div class="task-create">
     <h3>I want to…</h3>
-    <div class="task-create-main">
-        <div>
-            <a href="#" class="new-task">add a task</a>
-        </div>
+    <a href="#" class="add-new-task">Add New Task</a>
+    <div class="new-task-box">
 
-        <div class='new-title'>
-            <label>title</label>
-            <input class="title-input" value="">
-        </div>
+        <a class="task-title">Title</a>
+        <input class="task-title-input" value="">
+        <br>
 
-        <div class='new-detail'>
-            <input class="detail-input" value="">
-        </div>
 
-        <div class='new-tags'>
-            <label>tags</label>
-            <input class="tags-input" value="">
-        </div>
+        <input class="task-detail-input" value="">
+        <br>
 
-        <div class="new-option">
-            <button class="new-confirm">confirm</button>
-            <button class="new-cancel">cancel</button>
+        <a class="task-tags">Tags</a>
+        <input class="task-tags-input" value="">
+        <br>
+
+        <div class="edit-op">
+            <button class="confirm">confirm</button>
+            <button class="cancel">cancel</button>
         </div>
     </div>
 </div>
