--- a/eagle/templates/account/login.html
+++ b/eagle/templates/account/login.html
@@ -5,16 +5,23 @@
 
 {% block content %}
 {% if messages %}
-<ul>
+<div class="help-text">
+<ul class="help-text">
     {% for message in messages %}
     <li>{{ message }}</li>
     {% endfor %}
 </ul>
+</div>
+<div class="login-div">
 {% endif %}
     <form action="" method="post">{% csrf_token %}
     <table border="0" cellpadding="0" >
         {{form.as_table}}        
     </table>
-    <p> <a href="/account/register/">注册</a> <a href="/account/index/">返回首页</a> <input type="submit" value="登录"/></p>
+    <div class="login-footer">
+        <input type="submit" value="登录" class="input-button"/>
+        <a href="/account/register/">注册</a> <a href="/account/index/">返回首页</a> 
+    </div>
     </form>
 {% endblock %}
+</div>
