--- a/eagle/templates/task/task_create.html
+++ b/eagle/templates/task/task_create.html
@@ -1,7 +1,6 @@
-<div class="task-create">
-    <h4>I want to…</h4>
+<div id="task-create-box" class="task-create">
     <a href="#" class="add-new-task">Add New Task</a>
-    <div class="new-task-box">
+    <div id="edit-task-box" class="edit-task-box">
 
         <a class="task-title">Title</a>
         <input class="task-title-input" value="">
@@ -15,9 +14,9 @@
         <input class="task-tags-input" value="">
         <br>
 
-        <div class="edit-op">
-            <button class="confirm">confirm</button>
-            <button class="cancel">cancel</button>
+        <div class="task-edit-option">
+            <button class="confirm opt-btn">confirm</button>
+            <button class="cancel opt-btn">cancel</button>
         </div>
     </div>
 </div>
